# feather-alloy

./: Cargo.toml  TECHNICAL_SPEC.md  tauri.conf.json
icons/: icon.icns
src/: commands.rs  context_menu.rs  favicon.rs  ipc.rs  lib.rs  main.rs  persistence.rs  profile.rs  server.rs  window_manager.rs
ui/: index.html  script.js  styles.css
ui/content/: add-profile.html  edit-profile.html  index.html  settings.html
ui/toolbar/: index.html  script.js
