[package]
name = "feather-alloy"
version = "0.1.0"
edition = "2021"

[lib]
name = "feather_alloy_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[dependencies]
wry = "0.54"
tao = "0.34"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.0", features = ["v4", "serde"] }
http = "1"
crossbeam-channel = "0.5"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
webkit2gtk = "2.0"
